# assessment-timetabling-problem-solver

./: .gitignore  CHANGELOG.md  README.md  constraints.py  main.py  metrics.py  requirements.txt  utilities.py  visualization.py
authentication/: database.py  login.py  registration.py
conditioning/: constraints.py
factories/: solver_factory.py
filesystem/: reader.py
gui/: setup.cfg
gui/timetablinggui/: __init__.py
gui/timetablinggui/windows/widgets/image/: gui_image.py
solvers/: __init__.py  cbc.py  deap.py  gurobi.py  localsearch.py  ortools.py  scip.py  tabusearch.py  zthree.py
user_interface/: __init__.py  gui.py  manager.py
user_interface/components/: controllers.py  models.py  views.py  visualization.py
utilities/: __init__.py  abstracts.py  class_typing.py  functions.py  metrics.py  typehints.py
