[metadata]
name = timetablinggui
version = 5.2.2
description = Create modern looking GUIs with Python
long_description = A modern and customizable python UI-library based on Tkinter: https://timetablinggui.josephchay.com
long_description_content_type = text/markdown
url = https://timetablinggui.josephchay.com
author = Joseph Chay
license = Creative Commons Zero v1.0 Universal
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[project.urls]
homepage = https://timetablinggui.josephchay.com
documentation = https://timetablinggui.josephchay.com/documentation
repository = https://github.com/josephchay/assessment-timetabling-problem-solver

[options]
python_requires = >=3.7
packages =
    timetablinggui
    timetablinggui.windows
    timetablinggui.windows.widgets
    timetablinggui.windows.widgets.appearance_mode
    timetablinggui.windows.widgets.core_rendering
    timetablinggui.windows.widgets.core_widget_classes
    timetablinggui.windows.widgets.font
    timetablinggui.windows.widgets.image
    timetablinggui.windows.widgets.scaling
    timetablinggui.windows.widgets.theme
    timetablinggui.windows.widgets.utility
install_requires =
    darkdetect
    typing_extensions; python_version<="3.7"
    packaging
include_package_data = True
